fixed styling: box-shadow, image sizes etc

--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,7 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
+  <main> 
     <div class="grid-parent">
         <div class="grid-item grid-header">          
           <!--HEADER-->
@@ -24,7 +25,7 @@
             <!-- NAVBAR FOR DESKTOP AND PAD -->
             <div class="nav-bar">
                 <nav>
-                  <a class="active" href="#home">Home</a>
+                  <a class="active" href="#news">News</a>
                   <a href="#podcasts">Podcasts</a>
                   <a href="#books">Books</a>
                   <a href="#contact">Contact</a>
@@ -37,7 +38,7 @@
                 <i class="material-icons" style="font-size: 36px;">dehaze</i>
               </a>
               <div id="myLinks">
-                <a href="#home">Home</a>
+                <a href="#news">News</a>
                 <a href="#podcasts">Podcasts</a>
                 <a href="#books">Books</a>
                 <a href="#contact">Contact</a>
@@ -58,7 +59,7 @@
         </div> 
 
         <div class="grid-item grid-big-news">
-          <img src="police-6-9.jpg" alt="Two police officers and car"/>
+          <img src="police-16-9.jpg" alt="Police officers making an arrest."/>
           <div class ="big-news">
             <article>
               <h1>Murder solved after 15 years!</h1>
@@ -71,11 +72,12 @@
           </div>
         </div>
         <div class="grid-item grid-other-news">
-
-            <h1>Murder solved after 15 years!</h1>
+          <img src="forensic-16-9.jpg" alt="Forensic technician gathering evidence."/>
+          <h3>New technique withing forensic science</h3>
         </div>
         <div class="grid-item grid-other-news">
-            <h1>Murder solved after 15 years!</h1>
+            <img src="science-16-9.jpg" alt="Scientist working.">
+            <h3>Murder solved after 15 years!</h3>
         </div>
         <div class="grid-item grid-other-news">OTHER NEWS</div>
         <div class="grid-item grid-other-news">OTHER NEWS</div>
@@ -86,7 +88,7 @@
 
 
           
-
+      </main> 
           <section class="big-news">
             <!-- The big news content -->
           </section>
