--- a/code/index.html
+++ b/code/index.html
@@ -110,16 +110,16 @@
                 />
                 <figcaption>
                   <em>Illustration:</em><em> Touch the Peacock</em>
-                  <a
-                    href="https://www.instagram.com/touchthepeacock/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                  >
-                    <div class="icon-div">
-                      <i class="fa-brands fa-instagram" aria-hidden="true"></i
-                      ><span class="sr-only">Instagram</span>
-                    </div></a
-                  >
+                  <div class="icon-div">
+                    <a
+                      href="https://www.instagram.com/touchthepeacock/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                      <span class="sr-only">Instagram</span>
+                    </a>
+                  </div>
                 </figcaption>
               </figure>
             </div>
