Make other news and big news responsive to tablet

--- a/code/index.html
+++ b/code/index.html
@@ -125,14 +125,16 @@
             </div>
           </div>
           <div class="grid-child-big-news medium-grid-item">
-            <figure>
-              <img
-                src="../img/sunSalutatingCat.jpg"
-                class="img-big-news-two"
-                alt="A cat doing yoga indoors"
-              />
-              <figcaption><em>Photo:</em><em>Smirre Archives</em></figcaption>
-            </figure>
+            <div class="img-big-news-div">
+              <figure>
+                <img
+                  src="../img/sunSalutatingCat.jpg"
+                  class="img-big-news-two"
+                  alt="A cat doing yoga indoors"
+                />
+                <figcaption><em>Photo:</em><em>Smirre Archives</em></figcaption>
+              </figure>
+            </div>
           </div>
         </div>
       </section>
