Fix responsiveness tablet

--- a/code/index.html
+++ b/code/index.html
@@ -153,7 +153,10 @@
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q>Bouldering was so much fun and scary!</q>
+                        <q
+                          >Bouldering was so much fun, but at the same time,
+                          very scary!</q
+                        >
                       </p>
                       <div class="icon-div">
                         <i class="material-icons pets" aria-hidden="true"
