--- a/code/quotes.html
+++ b/code/quotes.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Cabin&family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Rancho&family=Rubik+Gemstones&family=Rye&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/818262a977.js"
@@ -51,29 +55,276 @@
           </div>
         </div>
       </nav>
-      <section class="logo-magazine">
-        <div class="kwadrat">
-          <div class="trojkat">
-            <div class="trojkat_bg"></div>
-          </div>
+    </header>
+
+    <section class="logo-magazine">
+      <div class="kwadrat">
+        <div class="trojkat">
+          <div class="trojkat_bg"></div>
         </div>
-        <h1>Catz Magazine</h1>
-        <div class="kwadrat2">
-          <div class="trojkat2">
-            <div class="trojkat_bg2"></div>
+      </div>
+      <h1>Catz Magazine</h1>
+      <div class="kwadrat2">
+        <div class="trojkat2">
+          <div class="trojkat_bg2"></div>
+        </div>
+      </div>
+    </section>
+    <div class="border-container">
+      <section class="big-news">
+        <!-- The big news content -->
+        <div class="grid-parent-big-news">
+          <div class="grid-child-big-news paragraph-grid-item">
+            <div class="big-news-paragraph">
+              <h2>The Latest Rage - Cat Yoga!</h2>
+              <p>
+                Cat Yoga is a calm and relaxing yin yoga class that suits
+                everyone. In the presence of our kitty cats, you get to land in
+                yourself. This class gives you the opportunity to feel the body,
+                let the mindrest and receive a recovery on a deep level. This is
+                more than ever in these times! Live cat yoga — participate from
+                the comfort of your own living room. After the success of cat
+                yoga in our cafe, we are now launching an exciting new product!
+                In order to welcome more participants, we will be broadcasting
+                live instructor-led yoga classes from our cat cafe every Monday
+                and Tuesday. You participate remotely via computer or mobile. If
+                you have a cat friend at home, they will participate based on
+                their desired interest.
+              </p>
+              <p>
+                Book your place here on the website by selecting
+                <em>Online Cat Yoga</em>. We close registration 30 minutes
+                before the yoga class starts and you who registered will receive
+                an email with a link and password about 15 minutes before the
+                start. Dates for the class will be released later and we will
+                also eventually offer participants on site in the café. We look
+                forward to meeting you on the yoga mat!
+              </p>
+
+              <div class="primary-link">
+                <a
+                  href="https://javawhiskers.se/en/cat-yoga/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Book cat yoga at Java Whiskers</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-big-news medium-grid-item">
+            <div class="img-big-news-div">
+              <figure>
+                <img
+                  src="../img/illustratedYogaCat.png"
+                  class="img-big-news-one"
+                  alt="An illustration of a cat sitting in the yoga lotus position"
+                />
+                <figcaption>
+                  <em>Illustration:</em><em> Touch the Peacock</em>
+                  <div class="icon-div">
+                    <a
+                      href="https://www.instagram.com/touchthepeacock/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                      <span class="sr-only">Instagram</span>
+                    </a>
+                  </div>
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+          <div class="grid-child-big-news medium-grid-item">
+            <div class="img-big-news-div">
+              <figure>
+                <img
+                  src="../img/sunSalutatingCat.jpg"
+                  class="img-big-news-two"
+                  alt="A cat doing yoga indoors"
+                />
+                <figcaption><em>Photo:</em><em>Smirre Archives</em></figcaption>
+              </figure>
+            </div>
           </div>
         </div>
       </section>
-    </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
-      <h2>Quotes & Memes</h2>
-    </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
+      <section class="other-news">
+        <h3>Smirre Works Out</h3>
+        <!-- The other news  -->
+        <!-- On desktop-sized screens: four cards in a row, 
+         On tablets: two in a row, 
+        On mobile: one card on each row. -->
+        <div class="grid-parent-other-news">
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Bouldering</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review">
+                        <q
+                          >Bouldering was so much fun, but at the same time,
+                          very scary!</q
+                        >
+                      </p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/climbingCat.jpg"
+                        class="img-other-news-two"
+                        alt="A cat climbing"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Outdoor Yoga</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <div>
+                        <p class="review">
+                          <q>I absolutely adore outdoor yoga!</q>
+                        </p>
+                        <div class="icon-div">
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                        </div>
+                      </div>
+                      <figure>
+                        <img
+                          src="../img/outoodoorYogaCat.jpg"
+                          class="img-other-news-one"
+                          alt="A cat doing yoga outdoors"
+                        />
+                        <figcaption class="figcaption-other-news">
+                          <em>Photo:</em><em>Smirre Archives</em>
+                        </figcaption>
+                      </figure>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Power Walkin'</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review">
+                        <q>Walking is nice, but no sweat!</q>
+                      </p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/walkingCat.jpeg"
+                        class="img-other-news-three"
+                        alt="A cat walking"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Abs Crunchin'</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review"><q>Omg, I hate crunches!</q></p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/crunchingCat.jpg"
+                        class="img-other-news-four"
+                        alt="A cat doing crunches"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <footer>
       <div class="logo-footer">
         <img src="../img/a_cat.jpg" alt="Logo, black cat" />
