fixed styling, checked code, tweaked media query for tablet

--- a/code/index.html
+++ b/code/index.html
@@ -5,40 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>True Crime News</title>
     <link rel="stylesheet" href="./style.css"/>
-    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet">
-    
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
   <main> 
     <div class="grid-parent">
-        <div class="grid-item grid-header">          
-          <!--HEADER-->
+
+      <!--HEADER-->
+        <div class="grid-item grid-header">
           <header>
 
             <!-- NAVBAR -->
             <div class="nav-bar">
-              <nav>
               <div class="logo">
-                <img src="images/logo.png" alt="Logo of True Crime News">
+                <img src="images/logo.png" alt="Logo of True Crime News"/>
               </div>
-                  <div class="openMenu">
-                    <i class="fa fa-bars"></i>
+              <nav>                      
+                <div class="openMenu">
+                  <i class="fa fa-bars"></i>
+                </div>
+                <ul class="mainMenu">
+                  <li><a class="active" href="#news">News</a></li>
+                  <li><a href="#podcasts">Podcasts</a></li>
+                  <li><a href="#books">Books</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                  <div class="closeMenu">
+                    <i class="fa fa-times"></i>
                   </div>
-                  <ul class="mainMenu">
-                    <li><a class="active" href="#news">News</a></li>
-                    <li><a href="#podcasts">Podcasts</a></li>
-                    <li><a href="#books">Books</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <div class="closeMenu">
-                      <i class="fa fa-times"></i>
-                    </div>
-
                 </ul>
               </nav>           
             </div>
+
             <!--Link to javascript-file-->
             <script src="./app.js"></script>        
   
@@ -51,68 +50,67 @@
           <div class ="big-news">
             <article>
               <h1>True crime attracts young people to become police officers</h1>
-                  <p>Many Americans (63%) believe true crime gives people a better 
-                    understanding of the criminal justice system, there is division 
-                    as to whether it increases or decreases trust in the police: 37% 
-                    think it increases trust in police, while 31% think it decreases 
-                    trust in them. However, police academies across the country have 
-                    noticed an increase of applications during the last 10 years. A 
-                    study was conducted by Harvard University to examine of the applicants had 
-                    been in contact with the true crime genre and if it made them 
-                    interested in the police profession. 43% answered yes. </p>
+                <p>Many Americans (63%) believe true crime gives people a better 
+                  understanding of the criminal justice system, there is division 
+                  as to whether it increases or decreases trust in the police: 37% 
+                  think it increases trust in police, while 31% think it decreases 
+                  trust in them. However, police academies across the country have 
+                  noticed an increase of applications during the last 10 years. A 
+                  study was conducted by Harvard University to examine of the applicants had 
+                  been in contact with the true crime genre and if it made them 
+                  interested in the police profession. 43% answered yes.</p>
             </article>
           </div>
         </div>
+
         <!--Other news divs-->
         <div class="grid-item grid-other-news">
-          <img src="images/forensic-16-9.jpg" alt="Forensic technician gathering evidence.">
+          <img src="images/forensic-16-9.jpg" alt="Forensic technician gathering evidence."/>
           <h3>Forensic technicians found new evidence in drug trafficking case</h3>
         </div>
 
         <div class="grid-item grid-other-news">
-          <img src="images/trial-16-9.jpg" alt="Suspect and police officer.">
+          <img src="images/trial-16-9.jpg" alt="Suspect and police officer."/>
           <h3>Arrest made in 23 year old murder case in New York</h3>
         </div>
 
         <div class="grid-item grid-other-news">
-          <img src="images/police2-16-9.jpg" alt="Police officer at demonstration.">  
+          <img src="images/police2-16-9.jpg" alt="Police officer at demonstration."/>  
           <h3>Facebook sued for not stopping fake news in connection to violent rallies</h3>
         </div>
 
         <div class="grid-item grid-other-news">
-          <img src="images/MFM-16-9.jpg" alt="MFM podcast hosts.">
+          <img src="images/MFM-16-9.jpg" alt="MFM podcast hosts."/>
           <h3>My Favorite Murder voted the best true crime podcast of 2022</h3>
         </div>
 
         <div class="grid-item grid-other-news">
-          <img src="images/jack-16-9.jpg" alt="Illustration of Jack the Ripper victim.">
+          <img src="images/jack-16-9.jpg" alt="Illustration of Jack the Ripper victim."/>
           <h3>Historians present new theories on Jack the Ripper case</h3>
         </div>
 
         <div class="grid-item grid-other-news">
-          <img src="images/yellowtape-16-9.jpg" alt="Yellow tape.">
+          <img src="images/yellowtape-16-9.jpg" alt="Yellow tape."/>
           <h3>True crime fans obtruct police work by walking into crime scene </h3>
         </div>
 
         <div class="grid-item grid-other-news">
-          <img src="images/science-16-9.jpg" alt="Scientist working.">
+          <img src="images/science-16-9.jpg" alt="Scientist working."/>
           <h3>Revolutionizing new technique within forensic science</h3>
         </div>
 
         <div class="grid-item grid-other-news">
-          <img src="images/crimecon-16-9.jpg" alt="Crimecon panel">
+          <img src="images/crimecon-16-9.jpg" alt="Crimecon panel"/>
           <h3>CrimeCon finally returns to Orlando after 2 years. </h3>
         </div>
 
+        <!--Footer-->
         <div class="footer">
           <footer>
             <p>This website was made by: Annika Sonnek
             <p>annika.sonnek@gmail.com</a></p>
-
           </footer>
-        </div>
-      </main> 
-      
     </div>
-  </body>
+  </main> 
+</body>
 </html>
