Change name and navbar
Change Contact to Most Wanted

--- a/code/index.html
+++ b/code/index.html
@@ -40,7 +40,7 @@
               <a href="quotes.html">Quotes & Memes</a>
             </li>
             <li>
-              <a href="contact.html#contact">Contact</a>
+              <a href="mostwanted.html">Most Wanted</a>
             </li>
           </ul>
         </div>
